--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -3,3 +3,4 @@ set: "&a[Hat] Item set as hat."
 stack-size: "&c[Hat] Your hat must have a stack size of 1."
 no-permission: "&c[Hat] You do not have permission to wear this hat"
 console: "&c[Hat] You cannot execute this command from the console."
+curse: "&c[Hat] Your helmet has Curse Of Binding."
